# loris

./: CMakeLists.txt  Makefile  README  config.h  config.status  configure.ac  libtool
cmake/: LorisConfig.cmake
csound/: Makefile
doc/: Makefile
scripting/: Makefile
src/: BreakpointUtils.h  Collator.C  Collator.h  Distiller.C  Makefile  Marker.h  PartialUtils.h  ReassignedSpectrum.C  Sieve.C  lorisNonObj_pi.C  lorisUtilities_pi.C
test/: Makefile
utils/: Makefile  loris-analyze  loris-dilate  loris-mark  loris-spewmarkers  loris-synthesize  loris-unmark
